--- a/index.html/index.html
+++ b/index.html/index.html
@@ -13,18 +13,18 @@
         <div class="portfolio-icon">
             <img src="https://cdn3d.iconscout.com/3d/premium/thumb/portfolio-6824186-5602837.png?f=webp" alt="Portfolio-icon">
         </div>
+        <div class="hire-me">
+            <a href="#home"><button id="hire-me" type="button">Hire me</button></a></button>
+        </div>
         <nav class="nav">
             <ul>
-            <a href="#home">Home</a>
+            <a href=".home">Home</a>
             <a href="#main-about">About</a>
             <a href="#quality">Quality</a>
             <a href="#skills">Skill</a>
             <a href="#contact">Contact</a>
         </ul>
         </nav>
-        <div class="hire-me">
-            <a href="#home"><button id="hire-me" type="button">Hire me</button></a></button>
-        </div>
     </div>
 
     <!-- Home -->
@@ -38,8 +38,8 @@
           ><br /><span id="desig">Front-End Developer</span>
       <section> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
         <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button" class="button">LinkedIn</button></a></button>
-      </section>
-      <p class="det">A dedicated youth aspiring to prove skills/abilities in Information Technology  <br>field.Strongly believes in problem solving tools: Creativity, Out of box thinking &<br> Brainstorming session. Fully conversant with SDLC. Possess non-IT experience <br> of 2 years. I bring a diverse skill set and a proven track record of success to <br>contribute my expertise and drive results for the new organization. Aiming for the  <br>role of Front-End Developer in Nagpur / Pune / Bangalore.</p>
+        <p class="det">A dedicated youth aspiring to prove skills/abilities in Information Technology  <br>field.Strongly believes in problem solving tools: Creativity, Out of box thinking &<br> Brainstorming session. Fully conversant with SDLC. Possess non-IT experience <br> of 2 years. I bring a diverse skill set and a proven track record of success to <br>contribute my expertise and drive results for the new organization. Aiming for the  <br>role of Front-End Developer in Nagpur / Pune / Bangalore.</p>
+    </section>
       </div>    
     </div>
 
