--- a/index.html/index.html
+++ b/index.html/index.html
@@ -13,9 +13,6 @@
         <div class="portfolio-icon">
             <img src="https://cdn3d.iconscout.com/3d/premium/thumb/portfolio-6824186-5602837.png?f=webp" alt="Portfolio-icon">
         </div>
-        <div class="hire-me">
-            <a href="#home"><button id="hire-me" type="button">Hire me</button></a></button>
-        </div>
         <nav class="nav">
             <ul>
             <a href=".home">Home</a>
@@ -25,6 +22,9 @@
             <a href="#contact">Contact</a>
         </ul>
         </nav>
+        <div class="hire">
+          <a href="#home"><button type="button">Hire me</button></a></button>
+      </div>
     </div>
 
     <!-- Home -->
@@ -38,45 +38,107 @@
           ><br /><span id="desig">Front-End Developer</span>
       <section> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
         <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button" class="button">LinkedIn</button></a></button>
-        <p class="det">A dedicated youth aspiring to prove skills/abilities in Information Technology  <br>field.Strongly believes in problem solving tools: Creativity, Out of box thinking &<br> Brainstorming session. Fully conversant with SDLC. Possess non-IT experience <br> of 2 years. I bring a diverse skill set and a proven track record of success to <br>contribute my expertise and drive results for the new organization. Aiming for the  <br>role of Front-End Developer in Nagpur / Pune / Bangalore.</p>
+        <p class="det">I am a Bachelor of Engineering, Specialized in Mechanical.<br> I have completed the degree in the year 2020.</p>
     </section>
       </div>    
     </div>
 
-    <!-- About -->
-    <!-- <div id="main-about">
-        <div><h1 id="abo-ut">ABOUT</h1></div>
-        <div><h1 id="abme">ABOUT ME</h1></div>
-        <div id="about">
-          <div>
-            <img src="Profile-pic2.jpeg" alt="Profile Pic" id="img2" />
-          </div>
-          <div>
-          <div class="objective">
-            <h1>Front-End Developer</h1>
-          </div>
-            <div>
-              <p class="det">A dedicated youth aspiring to prove skills/abilities in Information Technology  <br>field.Strongly believes in problem solving tools: Creativity, Out of box thinking &<br> Brainstorming session. Fully conversant with SDLC. Possess non-IT experience <br> of 2 years. I bring a diverse skill set and a proven track record of success to <br>contribute my expertise and drive results for the new organization. Aiming for the  <br>role of Front-End Developer in Nagpur / Pune / Bangalore.</p>
-            </div>
-            <span>
-              <ul class="ist-li">
-                <li class="nme">Name : Ayaz S. Qureshi</li>
-                <li class="rem">Degree : B.E (Mech)</li>
-                <li>Phone : +91-7841805400</li>
-                <li>Address : Kamptte city, District : Nagpur</li>
-              </ul>
-              <ul class="snd-li">
-                <li>Birthday : 05 June 1998</li>
-                <li>Experience : 2 years (Non-Tech)</li>
-                <li>Email : ayazq18@gmail.com</li>
-                <li>Freelance : Available</li>
-              </ul>
-            </span>
-            <div>
-              <a href="#home"><button class="hire" type="menu">Hire me</button></a></button>
-              <a href="#home"><button class="learn-more" type="menu">Learn more</button></a></button>
-          </div>
+    <!-- --card-section-- -->
+<div class="academics">
+      <div class="acad">
+        <i class="fa-solid fa-graduation-cap"></i>
+        <h1>Academics</h1>
+        <div class="hire-me"> 
+          <a href="#home"><button type="menu">Hire me</button></a></button>
         </div>
-        </div> -->
+        <div class="hire-more">
+          <a href="#home"><button type="menu">Learn more</button></a></button>
+        </div>
+      </div>
+    <div class="card-box">
+      <div class="card-section">
+        <img class="card-img" src="../images/card1.webp" alt="">
+        <div class="card-content">
+            <div class="card-list">
+                <ul class="ist-li">
+                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Bachelor of Engineering</li>
+                    <li>Degree year: 2020</li>
+                    <li>Rank : Distinction</li>
+                    <li>College : Anjuman College of Engineering & Technology, Nagpur</li>
+                </ul>
+            </div>
+        </div>
+      </div>
+      <div class="card-section">
+        <img class="card-img" src="../images/card2.jpg" alt="">
+        <div class="card-content">
+            <div class="card-list">
+                <ul class="ist-li">
+                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Higher Secondary Certificate</li>
+                    <li>Completion year : 2016</li>
+                    <li>Percentage : 64.70%</li>
+                    <li>College : S.K Porwal College, Kamptee</li>
+                </ul>
+            </div>
+        </div>
+      </div>
+      <div class="card-section">
+        <img class="card-img" src="../images/card3.jpg" alt="">
+        <div class="card-content">
+            <div class="card-list">
+                <ul class="ist-li">
+                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Senior Secondary Certificate</li>
+                    <li>Completion year : 2014</li>
+                    <li>Perentage : 70.40%</li>
+                    <li>School : St. Joseph's Convent, Kamptee</li>
+                </ul>
+            </div>
+        </div>
+      </div>
+      <div class="card-section">
+        <img class="card-img" src="../images/card4.jpg" alt="">
+        <div class="card-content">
+            <div class="card-list">
+                <ul class="ist-li">
+                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Front-End Developer</li>
+                    <li>Certification year: 2023</li>
+                    <li>Performance : Good</li>
+                    <li>Institute : Newton School</li>
+                </ul>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div class="contact">
+      <div id="mc">
+        <h2>CONTACT ME</h2>
+      </div>
+      <div class="fo">
+      <form id="form" action="port" method="">
+        <label for="name"></label><input class=" item item1" type="text" name="name" placeholder="Your Name"/>
+        <label for="email"></label><input class=" item item2" type="email" name="email" placeholder="Your Email"/>
+        <label for="subject"></label><input class=" item item3" type="text" name="subject" placeholder="Subject"/>
+        <label for="message"></label><textarea class=" item item4" rows="4" cols="30" type="text" name="message" placeholder="Message"></textarea>
+        <button class=" item item5" name="button" type="submit">Send Message</button>
+      </form>
+    </div>
+    
+    <!-- <footer id="contact">
+      <a href="#">
+          <i class="fa-brands fa-twitter"></i>
+      </a>
+      <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="#">
+          <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="#">
+          <i class="fa-solid fa-envelope"></i>
+      </a>
+      <p>© Copyright 2023 Portfolio</p> 
+    </footer> -->
   </body>
 </html>
