--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,131 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="../styles/index.css" />
-    <link style="border-radius: 50%" rel="icon" href="./Profile_pic.jpeg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  </head>
-  <body>
-    <div class="main-container">
-        <div class="portfolio-icon">
-            <img src="https://cdn3d.iconscout.com/3d/premium/thumb/portfolio-6824186-5602837.png?f=webp" alt="Portfolio-icon">
-        </div>
-        <nav class="nav">
-            <ul>
-            <a href=".home">Home</a>
-            <a href="#main-about">About</a>
-            <a href="#quality">Quality</a>
-            <a href="#skills">Skill</a>
-            <a href="#contact">Contact</a>
-        </ul>
-        </nav>
-        <div class="hire">
-          <a href="#home"><button type="button">Hire me</button></a></button>
-      </div>
-    </div>
 
-    <!-- Home -->
-    <!-- <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a></a> -->
-    <div class="home">
-      <div>
-        <img src="../images/Profile_pic.jpeg" alt="Profile Pic" id="img1" />
-      </div>
-      <div>
-          <h3 id="I">Hi,</h3><br /><span>I'm Ayaz S. Qureshi</span
-          ><br /><span id="desig">Front-End Developer</span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="../styles/index.css" />
+  <link style="border-radius: 50%" rel="icon" href="./Profile_pic.jpeg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+</head>
+
+<body>
+  <div class="main-container">
+    <div class="portfolio-icon">
+      <img src="https://cdn3d.iconscout.com/3d/premium/thumb/portfolio-6824186-5602837.png?f=webp" alt="Portfolio-icon">
+    </div>
+    <nav class="nav">
+      <ul>
+        <a href="#home">Home</a>
+        <a href="#academics">Academics</a>
+        <a href="#quality">Quality</a>
+        <a href="#skills">Skill</a>
+        <a href="#contact">Contact</a>
+      </ul>
+    </nav>
+    <div class="hire">
+      <a href="#home"><button type="button">Hire me</button></a></button>
+    </div>
+  </div>
+
+  <!-- Home -->
+  <!-- <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a></a> -->
+  <section class="home" id="home">
+    <div>
+      <img src="../images/Profile_pic.jpeg" alt="Profile Pic" id="img1" />
+    </div>
+    <div>
+      <h3 id="I">Hi,</h3><br /><span>I'm Ayaz S. Qureshi</span><br /><span id="desig">Front-End Developer</span>
       <section> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
-        <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button" class="button">LinkedIn</button></a></button>
-        <p class="det">I am a Bachelor of Engineering, Specialized in Mechanical.<br> I have completed the degree in the year 2020.</p>
-    </section>
-      </div>    
+        <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button"
+            class="button">LinkedIn</button></a></button>
+        <p class="det">I am a Bachelor of Engineering, Specialized in Mechanical.<br> I have completed the degree in the
+          year 2020.</p>
+      </section>
     </div>
+  </section>
 
-    <!-- --card-section-- -->
-<div class="academics">
-      <div class="acad">
-        <i class="fa-solid fa-graduation-cap"></i>
-        <h1>Academics</h1>
-        <div class="hire-me"> 
-          <a href="#home"><button type="menu">Hire me</button></a></button>
-        </div>
-        <div class="hire-more">
-          <a href="#home"><button type="menu">Learn more</button></a></button>
-        </div>
+  <!-- --card-section-- -->
+  <section id="academics" class="academics">
+    <div class="acad">
+      <i class="fa-solid fa-graduation-cap"></i>
+      <hr />
+      <h1>Academics</h1>
+      <div class="hire-me">
+        <a href="#home"><button type="menu">Hire me</button></a></button>
       </div>
+      <div class="hire-more">
+        <a href="#home"><button type="menu">Learn more</button></a></button>
+      </div>
+    </div>
     <div class="card-box">
       <div class="card-section">
         <img class="card-img" src="../images/card1.webp" alt="">
         <div class="card-content">
-            <div class="card-list">
-                <ul class="ist-li">
-                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Bachelor of Engineering</li>
-                    <li>Degree year: 2020</li>
-                    <li>Rank : Distinction</li>
-                    <li>College : Anjuman College of Engineering & Technology, Nagpur</li>
-                </ul>
-            </div>
+          <div class="card-list">
+            <ul class="ist-li">
+              <li style=" font-size:15px; font-weight: 700;;">Bachelor of Engineering</li>
+              <li>Degree year: 2020</li>
+              <li>Rank : Distinction</li>
+              <li>College : Anjuman College of Engineering & Technology, Nagpur</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="card-section">
         <img class="card-img" src="../images/card2.jpg" alt="">
         <div class="card-content">
-            <div class="card-list">
-                <ul class="ist-li">
-                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Higher Secondary Certificate</li>
-                    <li>Completion year : 2016</li>
-                    <li>Percentage : 64.70%</li>
-                    <li>College : S.K Porwal College, Kamptee</li>
-                </ul>
-            </div>
+          <div class="card-list">
+            <ul class="ist-li">
+              <li style=" font-size:15px; font-weight: 700;">Higher Secondary Certificate</li>
+              <li>Completion year : 2016</li>
+              <li>Percentage : 64.70%</li>
+              <li>College : S.K Porwal College, Kamptee</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="card-section">
         <img class="card-img" src="../images/card3.jpg" alt="">
         <div class="card-content">
-            <div class="card-list">
-                <ul class="ist-li">
-                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Senior Secondary Certificate</li>
-                    <li>Completion year : 2014</li>
-                    <li>Perentage : 70.40%</li>
-                    <li>School : St. Joseph's Convent, Kamptee</li>
-                </ul>
-            </div>
+          <div class="card-list">
+            <ul class="ist-li">
+              <li style=" font-size:15px;font-weight: 700;">Senior Secondary Certificate</li>
+              <li>Completion year : 2014</li>
+              <li>Perentage : 70.40%</li>
+              <li>School : St. Joseph's Convent, Kamptee</li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="card-section">
         <img class="card-img" src="../images/card4.jpg" alt="">
         <div class="card-content">
-            <div class="card-list">
-                <ul class="ist-li">
-                    <li style=" font-size:20px; background-color: whitesmoke; font-weight: 700; color: red;">Front-End Developer</li>
-                    <li>Certification year: 2023</li>
-                    <li>Performance : Good</li>
-                    <li>Institute : Newton School</li>
-                </ul>
-            </div>
+          <div class="card-list">
+            <ul class="ist-li">
+              <li style=" font-size:15px; font-weight: 700;">Front-End Developer</li>
+              <li>Certification year: 2023</li>
+              <li>Performance : Good</li>
+              <li>Institute : Newton School</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    </div>
+  </section>
 
-    <div class="contact">
-      <div id="mc">
-        <h2>CONTACT ME</h2>
-      </div>
-      <div class="fo">
+  <div id="contact" class="contact">
+    <div id="mc">
+      <h2>CONTACT ME</h2>
+    </div>
+    <div class="fo">
       <form id="form" action="port" method="">
-        <label for="name"></label><input class=" item item1" type="text" name="name" placeholder="Your Name"/>
-        <label for="email"></label><input class=" item item2" type="email" name="email" placeholder="Your Email"/>
-        <label for="subject"></label><input class=" item item3" type="text" name="subject" placeholder="Subject"/>
-        <label for="message"></label><textarea class=" item item4" rows="4" cols="30" type="text" name="message" placeholder="Message"></textarea>
+        <label for="name"></label><input class=" item item1" type="text" name="name" placeholder="Your Name" />
+        <label for="email"></label><input class=" item item2" type="email" name="email" placeholder="Your Email" />
+        <label for="subject"></label><input class=" item item3" type="text" name="subject" placeholder="Subject" />
+        <label for="message"></label><textarea class=" item item4" rows="4" cols="30" type="text" name="message"
+          placeholder="Message"></textarea>
         <button class=" item item5" name="button" type="submit">Send Message</button>
       </form>
     </div>
-    
-    <!-- <footer id="contact">
+
+    <footer id="contact">
       <a href="#">
           <i class="fa-brands fa-twitter"></i>
       </a>
@@ -139,6 +144,7 @@
           <i class="fa-solid fa-envelope"></i>
       </a>
       <p>© Copyright 2023 Portfolio</p> 
-    </footer> -->
-  </body>
+    </footer>
+</body>
+
 </html>
