--- a/index.html/index.html
+++ b/index.html/index.html
@@ -37,12 +37,12 @@
     </div>
     <div>
       <h3 id="I">Hi,</h3><br /><span>I'm Ayaz S. Qureshi</span><br /><span id="desig">Front-End Developer</span>
-      <section> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
+      <div> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
         <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button"
             class="button">LinkedIn</button></a></button>
         <p class="det">I am a Bachelor of Engineering, Specialized in Mechanical.<br> I have completed the degree in the
           year 2020.</p>
-      </section>
+      </div>
     </div>
   </section>
 
