--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,7 +7,7 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="../styles/index.css" />
   <link style="border-radius: 50%" rel="icon" href="./Profile_pic.jpeg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"> -->
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> -->
 
 </head>
