--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <header>
+    <a href="#home"><i class="fa-solid fa-circle-chevron-up"></i></a></a>
     <div class="head-section">
       <div class="nav-bar">
         <div class="port-logo"><span>Ayaz </span> Qureshi</div>
@@ -22,7 +23,7 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#academics">ACADEMICS</a></li>
             <li><a href="#skill">SKILLS</a></li>
-            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#project-container">PROJECTS</a></li>
             <li><a href="#contact">CONTACT ME</a></li>
           </ul>
         </div>
@@ -118,24 +119,68 @@
   </section>
 
 
-<!-- ------Skills------- -->
-<section class="skill" id="skill">
-  <div class="myskill">
-    <h1>My Skills</h1>
-    <li><h3>HTML</h3>
-      <span class="bar"><span class="html"></span></span>
-    </li>
-    <li><h3>CSS</h3>
-      <span class="bar"><span class="css"></span></span>
-    </li>
-    <li><h3>JS</h3>
-      <span class="bar"><span class="js"></span></span>
-    </li>
-    <li><h3>JAVA</h3>
-      <span class="bar"><span class="java"></span></span>
-    </li>
-  </div>
-</section>
+  <!-- ------Skills------- -->
+  <section class="skill" id="skill">
+    <div class="myskill">
+      <h1>My Skills</h1>
+      <li>
+        <h3>HTML</h3>
+        <span class="bar"><span class="html"></span></span>
+      </li>
+      <li>
+        <h3>CSS</h3>
+        <span class="bar"><span class="css"></span></span>
+      </li>
+      <li>
+        <h3>JS</h3>
+        <span class="bar"><span class="js"></span></span>
+      </li>
+      <li>
+        <h3>JAVA</h3>
+        <span class="bar"><span class="java"></span></span>
+      </li>
+    </div>
+  </section>
+
+  <!-- My Projects -->
+  <section id="project-container">
+    <div class="project-title">
+      <img src="../images/project-icon.png" alt="">
+      <h1>MY PROJECTS</h1>
+    </div>
+    <div class="project-box">
+      <div class="project-section">
+        <div class="project-content">
+          <img src="../images/Project-portfolio.png" class="portfolio-img">
+          <div class="portfolio-matter">
+            <h2 id="mp">My portfolio</h2>
+            <a href="https://ayazq18.github.io/Portfolio/index.html/" target="_blank"><i class="fa-solid fa-link link-icon"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-section">
+        <div class="project-content">
+          <img src="../images/project-spotify.png" class="portfolio-img">
+          <div class="portfolio-matter">
+            <h2 id="sl">Spotify Landing Page</h2>
+            <a href="https://ayazq18.github.io/Spotify/" target="_blank"><i class="fa-solid fa-link link-icon"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-box">
+        <div class="project-section">
+          <div class="project-content">
+            <img src="../images/Project-portfolio.png" class="portfolio-img">
+            <div class="portfolio-matter">
+              <h2 id="mp">My portfolio</h2>
+              <a href="https://ayazq18.github.io/Portfolio/index.html/" target="_blank"><i class="fa-solid fa-link link-icon"></i></a>
+            </div>
+          </div>
+        </div>
+    </div>
+  </section>
 
   <!-- ---contact--- -->
   <div id="contact" class="contact">
@@ -144,31 +189,34 @@
     </div>
     <div class="fo">
       <form id="form" action="port" method="">
+        <fieldset>
+          <legend>Contact</legend>
         <label for="name"></label><input class=" item item1" type="text" name="name" placeholder="Your Name" />
         <label for="email"></label><input class=" item item2" type="email" name="email" placeholder="Your Email" />
         <label for="subject"></label><input class=" item item3" type="text" name="subject" placeholder="Subject" />
         <label for="message"></label><textarea class=" item item4" aria-valuemax="400px" type="text" name="message"
           placeholder="Message"></textarea>
         <button class="  item5" name="button" type="submit">Send Message</button>
+        </fieldset>
       </form>
     </div>
   </div>
 
-    <footer id="contact">
-      <a href="#">
-        <i class="fa-brands fa-twitter"></i>
-      </a>
-      <a href="#">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="#">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
-      <a href="#">
-        <i class="fa-solid fa-envelope"></i>
-      </a>
-      <p>© Copyright 2023 Portfolio</p>
-    </footer>
+  <footer id="footer">
+    <a href="#">
+      <i class="fa-brands fa-twitter"></i>
+    </a>
+    <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a href="https://www.facebook.com/ayaz.qureshi.18400" target="_blank">
+      <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a href="#">
+      <i class="fa-solid fa-envelope"></i>
+    </a>
+    <p>© Copyright 2023 Portfolio</p>
+  </footer>
 </body>
 
 </html>
