--- a/index.html/index.html
+++ b/index.html/index.html
@@ -67,11 +67,11 @@
         <img class="card-img" src="../images/card1.webp" alt="">
         <div class="card-content">
           <div class="card-list">
-            <ul class="ist-li">
-              <li style=" font-size:20px; font-weight: 700;;">Bachelor of Engineering</li>
-              <li>Degree year: 2020</li>
-              <li>Rank : Distinction</li>
-              <li>College : Anjuman College of Engineering & Technology</li>
+            <ul >
+              <li class="list-li">Bachelor of Engineering</li>
+              <li><span>Degree year :</span> 2020</li>
+              <li><span>Rank :</span> Distinction</li>
+              <li><span>College :</span> Anjuman College of Engineering & Technology</li>
             </ul>
           </div>
         </div>
@@ -80,11 +80,11 @@
         <img class="card-img" src="../images/card2.jpg" alt="">
         <div class="card-content">
           <div class="card-list">
-            <ul class="ist-li">
-              <li style=" font-size:25px; font-weight: 700;">Higher Secondary</li>
-              <li>Completion year : 2016</li>
-              <li>Percentage : 64.70%</li>
-              <li>College : S.K Porwal College, Kamptee</li>
+            <ul>
+              <li class="list-li">Higher Secondary</li>
+              <li><span>Completion year :</span> 2016</li>
+              <li><span>Percentage :</span> 64.70%</li>
+              <li><span>College :</span> S.K Porwal College</li>
             </ul>
           </div>
         </div>
@@ -93,11 +93,11 @@
         <img class="card-img" src="../images/card3.jpg" alt="">
         <div class="card-content">
           <div class="card-list">
-            <ul class="ist-li">
-              <li style=" font-size:25px;font-weight: 700;">Senior Secondary</li>
-              <li>Completion year : 2014</li>
-              <li>Perentage : 70.40%</li>
-              <li>School : St. Joseph's Convent, Kamptee</li>
+            <ul>
+              <li class="list-li">Senior Secondary</li>
+              <li><span>Completion year :</span> 2014</li>
+              <li><span>Perentage :</span> 70.40%</li>
+              <li><span>School :</span> St. Joseph's Convent</li>
             </ul>
           </div>
         </div>
@@ -106,11 +106,11 @@
         <img class="card-img" src="../images/card4.jpg" alt="">
         <div class="card-content">
           <div class="card-list">
-            <ul class="ist-li">
-              <li style=" font-size:25px; font-weight: 700;">Front-End Developer</li>
-              <li>Certification year: 2023</li>
-              <li>Performance : Good</li>
-              <li>Institute : Newton School</li>
+            <ul>
+              <li class="list-li">Front-End Developer</li>
+              <li><span>Certification year:</span> 2023</li>
+              <li><span>Performance :</span> Good</li>
+              <li><span>Institute :</span> Newton School</li>
             </ul>
           </div>
         </div>
