--- a/index.html/index.html
+++ b/index.html/index.html
@@ -9,6 +9,7 @@
   <link style="border-radius: 50%" rel="icon" href="./Profile_pic.jpeg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> -->
+  <link rel="icon" style="border-radius: 50%;" type="image/icon" href="../images/Profile_pic.jpeg">
 
 </head>
 
@@ -172,10 +173,10 @@
       <div class="project-box">
         <div class="project-section">
           <div class="project-content">
-            <img src="../images/Project-portfolio.png" class="portfolio-img">
+            <img src="../images/project-amazon.png" class="portfolio-img">
             <div class="portfolio-matter">
-              <h2 id="mp">My portfolio</h2>
-              <a href="https://ayazq18.github.io/Portfolio/index.html/" target="_blank"><i class="fa-solid fa-link link-icon"></i></a>
+              <h2 id="mp">Amazon Clone</h2>
+              <a href="https://ayazq18.github.io/Amazon-clone/" target="_blank"><i class="fa-solid fa-link link-icon"></i></a>
             </div>
           </div>
         </div>
